<resources>
    <string name="app_name">BookShare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_add_book">Add your book</string>

    <!--Add Book Activity-->
    <string name="hint_book_name">Book Name</string>
    <string name="hint_book_author">Book Author</string>
    <string name="hint_book_publisher">Book Publisher</string>
    <string name="hint_book_genre">Book Genre</string>
    <string name="hint_add_book_photo">+ Add book photo</string>
    <string name="camera_and_storage_rationale">Need storage and camera permission</string>
    <string name="sign_in_cancelled">Sign up cancelled by the user</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="hint_book_description">Book Description</string>
    <string name="upload_video">Upload</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="upload_complete">Upload complete</string>

    <string-array name="genre_array">
        <item>Science fiction</item>
        <item>Satire</item>
        <item>Drama</item>
        <item>Romance</item>
        <item>Mystery</item>
        <item>Horror</item>
        <item>Health</item>
        <item>Guide</item>
        <item>Travel</item>
        <item>Science</item>
        <item>History</item>
        <item>Math</item>
        <item>Poetry</item>
        <item>Dictionaries</item>
        <item>Children\'s</item>
        <item>Religion, Spirituality &amp; New Age</item>
        <item>Self help</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_author_name">Please enter author name</string>
    <string name="error_book_name">Please enter book name</string>
    <string name="error_publisher_name">Please enter publisher name</string>
    <string name="messge_thank_you">Thank you for your inputs!</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="label_contact_info">Contact info</string>
    <string name="title_activity_my_books">My Books</string>
    <string name="main_notification_channel_name">Image Uploading</string>
    <string name="error_first_name">Please enter first name</string>
    <string name="error_last_name">Please enter last name</string>
    <string name="error_email">Please enter email address</string>
    <string name="error_phone_number">Please enter phone number</string>
    <string name="error_phone">Please enter valid phone number</string>
    <string name="empty_view">No books here</string>
    <string name="alert_delete_book">Are you sure want to delete this book?</string>

    <string name="alert_dialog_ok">yes</string>
    <string name="alert_dialog_cancel">No</string>

    <string name="link_forgot_password">Forgot password?</string>
    <string name="title_activity_forgot_password">Forgot password</string>
    <string name="title_activity_credit">Credits</string>

    <string name="hiral_email_id">hiral.hirani65@gmail.com</string>
    <string name="tirth_email_id">tirthp1313@gmail.com</string>
    <string name="rutvi_email_id">rutvieee0002@gmail.com</string>
    <string name="umang_email_id">umangdobariya001@gmail.com</string>
    <string name="raj_email_id">patelraj030@gmail.com</string>

</resources>
