<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
            android:id="@+id/llRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"

            tools:context=".AddEditBookActivity"
            tools:showIn="@layout/activity_add_book">

        <ImageView
            android:id="@+id/ivAddBookPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:visibility="gone"
            tools:src="@drawable/art_bookcover" />

        <Button
            android:id="@+id/btnAddBookPhoto"
            android:layout_width="196dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/round_button"
            android:text="@string/hint_add_book_photo"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etBoookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_book_name"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_book_author"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlBookPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etBookPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_book_publisher"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <app.bookshare.util.MultiSelectSpinner
                android:id="@+id/spGenre"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </app.bookshare.util.MultiSelectSpinner>


        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlBookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etBookDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/hint_book_description"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="10"
                android:minLines="3"
                android:scrollbars="vertical" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

